[project]
name = "project1-nechaeva-anna-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna N",email = "anna.afk@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
 packages = [
     { include = "labyrinth_game" },
 ]
 
[tool.poetry.scripts]
project = "labyrinth_game.main:main"


[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)"
]
